syntax = "proto3";

package postgres_service;

// A generic key-value record stored in PostgreSQL.
message Record {
    string id = 1;
    string table_name = 2;
    // JSON-encoded payload for flexibility.
    string payload = 3;
    string created_at = 4;
    string updated_at = 5;
}

// --- Create ---
message CreateRequest {
    string table_name = 1;
    // JSON-encoded fields for the new record.
    string payload = 2;
}

message CreateResponse {
    string id = 1;
    bool success = 2;
    string error = 3;
}

// --- Read ---
message ReadRequest {
    string id = 1;
    string table_name = 2;
}

message ReadResponse {
    Record record = 1;
    bool success = 2;
    string error = 3;
}

// --- List ---
message ListRequest {
    string table_name = 1;
    // Optional JSON filter object (e.g. {"status": "active"})
    string filter = 2;
    uint32 limit = 3;
    uint32 offset = 4;
}

message ListResponse {
    repeated Record records = 1;
    bool success = 2;
    string error = 3;
}

// --- Update ---
message UpdateRequest {
    string id = 1;
    string table_name = 2;
    // JSON-encoded fields to update (partial update / PATCH semantics).
    string payload = 3;
}

message UpdateResponse {
    bool success = 1;
    string error = 2;
}

// --- Delete ---
message DeleteRequest {
    string id = 1;
    string table_name = 2;
}

message DeleteResponse {
    bool success = 1;
    string error = 2;
}

service PostgresService {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Read(ReadRequest)     returns (ReadResponse);
    rpc List(ListRequest)     returns (ListResponse);
    rpc Update(UpdateRequest) returns (UpdateResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
}
